--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -22,6 +22,7 @@ jobs:
         python -m pip install --upgrade pip pipenv
         pipenv install
     - name: Bootstrap data
+      working-directory: ./bootstrap
       env:
         FIREBASE_BUCKET: ${{ secrets.FIREBASE_BUCKET }}
         FIREBASE_ADMIN_KEY: ${{ secrets.FIREBASE_ADMIN_KEY }}
