change botostrap directory

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Generate manifest.txt
       working-directory: ./bootstrap
       run: |
-        ./generate_manifest.sh > manifest.txt
+        ./generate_manifest.sh ../wiki > manifest_wiki.txt
     - name: Bootstrap data
       working-directory: ./bootstrap
       env:
